# Multi-Camera-Calibration

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
examples/: calibrate.py  transform.py
examples/calibration/: latest.npz
src/: __init__.py  calibrate.py  data.py  grid.py  pattern.py
src/utils/: binary_matrix.py  other.py  transform.py  types.py
