[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-camera-calibration"
version = "0.0.1"
description = "A multi-camera calibration system using ChArUco boards to align and transform camera views into a top-down perspective"
keywords = ["multi-camera", "calibration", "charuco", "opencv", "top-down", "computer vision", "robotics"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lars Knol", email = "hello@headtrixz.dev" }]
maintainers = [{ name = "Lars Knol", email = "hello@headtrixz.dev" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
"Homepage" = "https://github.com/HeadTriXz/Multi-Camera-Calibration"
"Bug Reports" = "https://github.com/HeadTriXz/Multi-Camera-Calibration/issues"
